[package]
name = "kcshot-rs"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kcshot-data", "kcshot-screenshot"]

[workspace.dependencies]
cairo = { package = "cairo-rs", version = "0.16.0", features = ["png"] }
gtk4 = "0.5.0"
once_cell = "1.13.1"
tracing = "0.1.23"

[dependencies]
kcshot-data = { path = "./kcshot-data" }

# UI-related dependencies
gtk4.workspace = true
ksni = "0.2.0"

# Screenshot editing & capturing
kcshot-screenshot = { path = "./kcshot-screenshot" }
cairo.workspace = true
gdk4-x11 = "0.5.0"
pangocairo = "0.16.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
regex = "1.5.6"
stackblur-iter = "0.2.0"

# User settings, history
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
xdg = "2.1"

# Miscellaneous
once_cell.workspace = true
rand = "0.8.4"

# Logging and error reporting
tracing.workspace = true
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
thiserror = "1.0.30"

[build-dependencies]
glib-build-tools = "0.16.0"

[features]
default = ["xdg-paths"]
xdg-paths = []
# Only specify this when trying to diagnose memory leaks, it shouldn't be used for normal usage
heaptrack = []
