[package]
name = "kcshot"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kcshot-data", "kcshot-screenshot"]

[workspace.lints.rust]
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kcshot_linting)'] }

[workspace.lints.clippy]
match_same_arms = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
items_after_statements = "warn"
useless_conversion = "warn"
dbg_macro = "warn"
unnecessary_wraps = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
no_effect_underscore_binding = "warn"
redundant_else = "warn"
single_match_else = "warn"

[workspace.dependencies]
cairo = { package = "cairo-rs", version = "0.20.5", features = ["png"] }
gtk4 = { version = "0.9.4", features = ["blueprint"] }
thiserror = "2.0.3"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tracing = "0.1.23"

[lints]
workspace = true

[dependencies]
kcshot-data = { path = "./kcshot-data" }

# UI-related dependencies
gtk4.workspace = true
ksni = "0.2.0"

# Screenshot editing & capturing
kcshot-screenshot = { path = "./kcshot-screenshot" }
cairo.workspace = true
gdk4-x11 = "0.9.4"
pangocairo = "0.20.4"
pulldown-cmark = { version = "0.12.2", default-features = false }
pulldown-cmark-escape = "0.11.0"
regex = "1.11.1"
stackblur-iter = "0.2.0"
tokio.workspace = true

# User settings, history
diesel = { version = "2.2.6", features = ["sqlite"] }
diesel_migrations = "2.1.0"
xdg = "2.1"

# Miscellaneous
rand = "0.8.4"

# Logging and error reporting
tracing.workspace = true
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
thiserror.workspace = true

[build-dependencies]
glib-build-tools = "0.20.0"

[features]
default = ["xdg-paths"]
xdg-paths = []
# Only specify this when trying to diagnose memory leaks, it shouldn't be used for normal usage
heaptrack = []
