[package]
name = "kcshot-screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcshot-data = { path = "../kcshot-data" }

# Actually taking the screeenshot
ashpd = { version = "0.4.0", default-features = false, features = [
    "gtk4",
    "tokio",
    "tracing",
] }
xcb = { git = "https://github.com/rust-x-bindings/rust-xcb/", features = [
    "debug_atom_names",
    "shape",
    "xfixes",
    "randr",
] }
serde = "1.0.152"
serde_json = "1.0.91"

cairo.workspace = true
gtk4.workspace = true
once_cell.workspace = true
tokio.workspace = true

# Error and logging
thiserror = "1.0.30"
tracing.workspace = true
